--- a/style.css
+++ b/style.css
@@ -247,12 +247,18 @@ button:hover {
     #header-info {
         margin: 1rem;
     }
+    #header {
+        place-self: center;
+    }
 
     .header-btn {
         display: flex;
         margin-top: 1.3rem;
         font-size: 1.2rem;
         padding: 1rem 6rem;
+    }
+     #computer-main-container {
+        place-self: center;
     }
 
     #computer-content-container {
@@ -292,6 +298,10 @@ button:hover {
 
     #text-box {
         position: inherit;
+    }
+     #download {
+        text-align: center;
+        place-self: center;
     }
 
     footer {
