--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     background-size: 100% 24%;
     background-position: top;
     margin-top: 100px;
+    background-color: red;
 }
 
 /* All */
